# JobExecutor

./: README.md  dataHandler.py  executor.py  pyproject.toml  taskOperator.py
dataStrategies/: baseStrategy.py  sqlStrategy.py
jobModels/: job_orm.py
job_exec/: constants.py  dataHandler.py  executor.py  taskOperator.py
job_exec/configClasses/: baseConfig.py
job_exec/dataStrategies/: baseStrategy.py  sqlStrategy.py
job_exec/jobModels/: flag_enum_type.py  job_dummy.py  job_dummy_orm.py  job_efi_web_orm.py  job_orm.py  job_plain.py
job_exec/taskStrategies/: baseStrategy.py  check_status.py  dummyStrategy.py  localStrategy.py  start.py  utilities.py
job_exec/taskStrategies/checkStatusStrategies/: noCheckStatus.py
job_exec/taskStrategies/transportationStrategies/: baseTransportation.py  localTransportation.py  noTransportation.py
templates/: dummy.config  jupyter_notebook_sqlite_dummy.config  jupyter_notebook_sqlite_efi_web.config  run_efi_nextflow.sh.jinja  sqlite_dummy.config  sqlite_local.config  sqlite_local.json
tests/: 00_config_file_test.py  01_constants_test.py  02_dataHandler_test.py  03_taskOperator_test.py  create_fake_db.py  create_fake_dummy_db.py  create_fake_efi_web_db.py  dataHandler_test.py
tests/implementation_tests/: dummy.ipynb  sql_dummy.ipynb  sql_efi_web.ipynb
